--- a/controlusercreate_on_client.yml
+++ b/controlusercreate_on_client.yml
@@ -16,7 +16,7 @@
       
    - name: add sudoers file for username
      copy:
-       src: sudoer_simone # local dir " username ALL=(ALL) NOPASSWD:ALL ""
+       src: sudoer_username # local dir " username ALL=(ALL) NOPASSWD:ALL ""
        dest: /etc/sudoers.d/username
        owner: root
        group: root
